Upgrade min Java version to 17 as version 2.0.0
Signed-off-by: Haroon Sheikh <haroon.sheikh@sky.uk>